welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:19: error: type mismatch;
 found   : (x: Double)Boolean <and> (x: Float)Boolean <and> (x: Long)Boolean <and> (x: Int)Boolean <and> (x: Char)Boolean <and> (x: Short)Boolean <and> (x: Byte)Boolean
 required: Boolean
	if ((b - a) > ){
                    ^